SVG layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -523,6 +523,18 @@ max-width: 0.5em;
   animation-direction: alternate;
   animation-timing-function: linear;
 }
+
+[class*="col-"] {
+  float: left;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.animation-2 {
+  width:100%; 
+  height:100%;
+}
+
 /* ==============================
 Medium devices (640px and larger)
 ================================= */
@@ -609,6 +621,10 @@ Medium devices (640px and larger)
     h4 {
       font-size: 1.35em;
       font-weight: 400;
+    }
+    .animation-2 {
+      width:430px; 
+      height:560px;
     }
 }
 
@@ -745,12 +761,6 @@ X-large devices (1440px or larger)
 
 #getintouch h2, h3 {
   text-align: center;
-}
-
-[class*="col-"] {
-  float: left;
-  padding-left: 10px;
-  padding-right: 10px;
 }
 
  @keyframes color-change {
